# VoroCrustRICH

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  VoroCrustAlgorithm.cpp  __init__.py  runVoroCrust.hpp  run_vorocrust.py  vorocrust_algorithm.py  vorocrust_vtk.cpp  vorocrust_vtk.hpp
PLC/: PL_Complex.hpp  VoroCrustFace.cpp  VoroCrustFace.hpp  VoroCrustVertex.hpp
RMPS/: CornersRMPS.hpp  EdgesRMPS.hpp  FacesRMPS.hpp
VoroCrust/: CMakeLists.txt  important_readme.md
VoroCrust/data/elad/: vertices.txt
VoroCrust/data/fox/: vertices.txt
VoroCrust/src/: PL_Complex.cpp  PL_Complex.hpp  VoroCrustAlgorithm.cpp  VoroCrustAlgorithm.hpp  VoroCrustEdge.cpp  VoroCrustEdge.hpp  VoroCrustFace.cpp  VoroCrustFace.hpp  VoroCrustVertex.cpp  VoroCrustVertex.hpp  mainVoroCurst.cpp  trees.cpp  trees.hpp  unsorted_unique.hpp  vorocrust_vtk.cpp  vorocrust_vtk.hpp  write_vtu_PL_complex.cpp
VoroCrust/src/PLC/: PL_Complex.cpp  PL_Complex.hpp  VoroCrustEdge.cpp  VoroCrustEdge.hpp  VoroCrustFace.cpp  VoroCrustFace.hpp  VoroCrustUsing.hpp  VoroCrustVertex.cpp  VoroCrustVertex.hpp
VoroCrust/src/RMPS/: CornersRMPS.cpp  CornersRMPS.hpp  EdgesRMPS.cpp  EdgesRMPS.hpp  FacesRMPS.cpp  FacesRMPS.hpp  SliverDriver.cpp  SliverDriver.hpp
VoroCrust/src/VoroCrust_kd_tree/: VoroCrust_kd_tree.cpp  VoroCrust_kd_tree.hpp
VoroCrust_kd_tree/: VoroCrust_kd_tree.hpp
compilation/: ModulesToLoad.py  SystemLibsLinks.py  __main__.py  _build.py
data/: theta.txt  xsi.txt
data/EOS/: CVfile.txt  Pfile.txt  Sfile.txt  Tfile.txt  Ufile.txt
data/astroid/: faces.txt  vertices.txt
data/cat/: faces.txt  vertices.txt
data/smiley/: faces.txt  vertices.txt
miscellaneous/: Mat33.hpp  utils.hpp
runs/BaseTDE/: submit.sh  test.cpp
runs/Marshak/: test.cpp
runs/sedov2d_test/: main.cpp
runs/shock_tube/: main.cpp
runs/vorocrust_astroid/: main.cpp
runs/vorocrust_fox/: main.cpp
scripts/: parse_obj_file.py
source/: CMakeLists.txt
source/3D/GeometryCommon/: Intersections.cpp  Intersections.hpp  RoundGrid3D.cpp  RoundGrid3D.hpp  Tessellation3D.hpp  UpdateBox.cpp  UpdateBox.hpp  Vector3D.cpp  Vector3D.hpp  Voronoi3D.cpp  Voronoi3D.hpp  hdf_write.cpp  hdf_write.hpp  write_vtu_3d.cpp  write_vtu_3d.hpp
source/3D/elementary/: Mat33.hpp  Vector3D.cpp  Vector3D.hpp
source/3D/environment/: DistributedOctEnvAgent.hpp  EnvironmentAgent.h  EnvironmentAgentInit.cpp  HilbertEnvAgent.hpp
source/3D/hilbert/: HilbertAgent.cpp  HilbertAgent.h  HilbertOrder3D.cpp  HilbertOrder3D.hpp  HilbertOrder3D_Utils.hpp  hilbertTypes.h
source/3D/r3d/: Intersection3D.cpp  Intersection3D.hpp
source/3D/range/: RangeAgent.cpp  RangeAgent.h
source/3D/tesselation/: Tessellation3D.hpp
source/ANN/: ANN.cpp  kd_fix_rad_search.cpp  kd_pr_search.cpp  kd_search.cpp  kd_util.cpp  pr_queue.h  pr_queue_k.h
source/Radiation/: Diffusion.cpp  Diffusion.hpp  DiffusionForce.cpp  conj_grad_solve.cpp  conj_grad_solve.hpp
source/VoroCrust/: VoroCrustAlgorithm.hpp  runVoroCrust.hpp  trees.cpp  trees.hpp  vorocrust_vtk.cpp  vorocrust_vtk.hpp
source/VoroCrust/PLC/: VoroCrustFace.cpp  VoroCrustVertex.cpp  VoroCrustVertex.hpp
source/VoroCrust/RMPS/: CornersRMPS.hpp  EdgesRMPS.cpp  EdgesRMPS.hpp  FacesRMPS.hpp  SliverDriver.cpp
source/VoroCrust/VoroCrust_kd_tree/: VoroCrust_kd_tree.hpp
source/ds/: BinaryTree.cpp  BinaryTree.h  geometry_utils.hpp
source/ds/AVLTree/: AVL.cpp  AVL.h
source/ds/DistributedOctTree/: DistributedOctTree.hpp
source/ds/GroupRangeTree/: GroupRangeTree.cpp  GroupRangeTree.h
source/ds/GroupTree/: GroupTree.cpp  GroupTree.h
source/ds/KDTree/: KDTree.hpp
source/ds/OctTree/: OctTree.hpp  geometry_utils.hpp  input.hpp  main.cpp
source/ds/RangeTree/: RangeTree.cpp  RangeTree.h
source/misc/: io3D.hpp  mesh_generator3D.hpp  serializable.hpp  simple_io.cpp  simple_io.hpp  sort.cpp  utils.hpp
source/mpi/: ConstNumberPerProc3D.cpp  HilbertProcPositions.cpp  HilbertProcPositions.hpp  ProcessorUpdate3D.hpp  SetLoad3D.cpp  SetLoad3D.hpp  mpi_commands.hpp
source/newtonian/common/: equation_of_state.hpp
source/newtonian/three_dimensional/: AMR3D.cpp  AMR3D.hpp  ConditionExtensiveUpdater3D.hpp  ConservativeForce3D.cpp  CourantFriedrichsLewy.cpp  Ghost3D.cpp  Ghost3D.hpp  LagrangianExtensiveUpdater3D.cpp  LinearGauss3D.cpp  OndrejEOS.cpp  OndrejEOS.hpp  OpticalDepthCalc.hpp  RoundCells3D.cpp  SeveralSources3D.cpp  SeveralSources3D.hpp  SourceTerm3D.hpp  SpatialReconstruction3D.hpp  TDE_force.cpp  TDE_force.hpp  cell_updater_3d.hpp  computational_cell.cpp  computational_cell.hpp  conserved_3d.cpp  conserved_3d.hpp  default_cell_updater.cpp  default_cell_updater.hpp  extensive_updater3d.hpp  flux_calculator_3d.cpp  flux_calculator_3d.hpp  hdsim_3d.cpp  hdsim_3d.hpp  point_motion_3d.hpp  time_step_function3D.hpp
source/newtonian/two_dimensional/: ConditionExtensiveUpdater.cpp  computational_cell_2d.hpp  hdf5_diagnostics.cpp  hdf5_diagnostics.hpp  simple_cfl.cpp  simple_cfl.hpp  simple_flux_calculator.cpp  write_vtk.cpp  write_vtk.hpp  write_vtu.cpp  write_vtu.hpp
source/utils/: assert.h  debug.h
source/utils/balance/: balance.hpp
source/utils/exchange/: exchange.hpp
source/utils/io/: input.hpp
source/utils/oldsort/: sort.hpp
src/: CMakeLists.txt  VoroCrustAlgorithm.cpp  VoroCrustAlgorithm.hpp  _VoroCrustAlgorithm.cpp  runVoroCrust.cpp  runVoroCrust.hpp
src/PLC/: CMakeLists.txt  PL_Complex.cpp  PL_Complex.hpp  VoroCrustEdge.cpp  VoroCrustEdge.hpp  VoroCrustFace.cpp  VoroCrustFace.hpp  VoroCrustUsing.hpp  VoroCrustVertex.hpp  _PL_Complex.cpp
src/RMPS/: CMakeLists.txt  CornersRMPS.cpp  CornersRMPS.hpp  EdgesRMPS.cpp  EdgesRMPS.hpp  FacesRMPS.cpp  FacesRMPS.hpp  SliverDriver.cpp  SliverDriver.hpp  _RMPS.cpp
src/VoroCrust_kd_tree/: CMakeLists.txt  VoroCrust_kd_tree.cpp  VoroCrust_kd_tree.hpp  _VoroCrust_kd_tree.cpp
src/miscellaneous/: CMakeLists.txt  Mat33.hpp  Vector3D.hpp  _Vector3D.cpp  unsorted_unique.hpp
src/trees/: CMakeLists.txt  _trees.cpp  trees.cpp  trees.hpp
src/vorocrust_vtk/: CMakeLists.txt  _vorocrust_vtk.cpp  vorocrust_vtk.cpp  vorocrust_vtk.hpp
tests/sedov2d_test/: main.cpp
(+27 files in other folders)
